Bug 924087 - Do not make editable elements as active, as their default action is disabled; r=smaug,dbaron